for-loop practice

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JS-practice</title>
   </head>
   <body>
-    <script type="module" src="./js/switch.js"></script>
+    <!-- <script type="module" src="./js/switch.js"></script> -->
+    <script type="module" src="./js/for-loop.js"></script>
   </body>
 </html>
