dom-example (input)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>JS-practice</title>
   </head>
   <body>
+    <label for="">
+      Введіть число
+      <input type="number" name="number" class="input" />
+    </label>
+    <button class="btn-add">Додати</button>
+    <button class="btn-clear">Очистити</button>
+    <p>Сума: <span class="totalOutput">0</span></p>
+
     <!-- <script type="module" src="./js/switch.js"></script> -->
-    <script type="module" src="./js/for-loop.js"></script>
+    <!-- <script type="module" src="./js/for-loop.js"></script> -->
+    <script type="module" src="./js/dom.js"></script>
   </body>
 </html>
