array practice + tasks part1

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- <script type="module" src="./js/switch.js"></script> -->
     <!-- <script type="module" src="./js/for-loop.js"></script> -->
-    <script type="module" src="./js/dom.js"></script>
+    <!-- <script type="module" src="./js/dom.js"></script> -->
+    <script type="module" src="./js/array.js"></script>
   </body>
 </html>
