--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- <script type="module" src="./js/switch.js"></script> -->
     <!-- <script type="module" src="./js/for-loop.js"></script> -->
     <!-- <script type="module" src="./js/dom.js"></script> -->
-    <script type="module" src="./js/array.js"></script>
+    <!-- <script type="module" src="./js/array.js"></script> -->
+    <script type="module" src="./js/function.js"></script>
   </body>
 </html>
