--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- <script type="module" src="./js/for-loop.js"></script> -->
     <!-- <script type="module" src="./js/dom.js"></script> -->
     <!-- <script type="module" src="./js/array.js"></script> -->
-    <script type="module" src="./js/function.js"></script>
+    <!-- <script type="module" src="./js/function.js"></script> -->
+    <script type="module" src="./js/object.js"></script>
   </body>
 </html>
