--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
     <button class="btn-clear">Очистити</button>
     <p>Сума: <span class="totalOutput">0</span></p>
 
+    <button type="button" class="js-button">Button</button>
+
     <!-- <script type="module" src="./js/switch.js"></script> -->
     <!-- <script type="module" src="./js/for-loop.js"></script> -->
     <!-- <script type="module" src="./js/dom.js"></script> -->
     <!-- <script type="module" src="./js/array.js"></script> -->
     <!-- <script type="module" src="./js/function.js"></script> -->
-    <script type="module" src="./js/object.js"></script>
+    <!-- <script type="module" src="./js/object.js"></script> -->
+
+    <!-- <script type="module" src="./js/methods-of-array.js"></script> -->
+    <script type="module" src="./js/callback.js"></script>
   </body>
 </html>
