--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- <script type="module" src="./js/function.js"></script> -->
     <!-- <script type="module" src="./js/object.js"></script> -->
 
-    <!-- <script type="module" src="./js/methods-of-array.js"></script> -->
-    <script type="module" src="./js/callback.js"></script>
+    <script type="module" src="./js/methods-of-array.js"></script>
+    <!-- <script type="module" src="./js/callback.js"></script> -->
   </body>
 </html>
