--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <!-- <script type="module" src="./js/function.js"></script> -->
     <!-- <script type="module" src="./js/object.js"></script> -->
 
-    <script type="module" src="./js/methods-of-array.js"></script>
+    <!-- <script type="module" src="./js/methods-of-array.js"></script> -->
     <!-- <script type="module" src="./js/callback.js"></script> -->
+    <!-- <script type="module" src="./js/this.js"></script> -->
+    <script type="module" src="./js/class.js"></script>
+    <!-- <script type="module" src="./js/object-prototype.js"></script> -->
   </body>
 </html>
