--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>JS-practice</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="./dom.html">dom</a></li>
+        </ul>
+      </nav>
+    </header>
     <label for="">
       Введіть число
       <input type="number" name="number" class="input" />
