dom practice - classList

--- a/dom.html
+++ b/dom.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <ul class="list">
@@ -21,6 +22,13 @@
         <li class="btn-item"><button data-action="create">Создать</button></li>
         <li class="btn-item"><button data-action="remove">Удалить</button></li>
         <li class="btn-item"><button data-action="change">Редактировать</button></li>
+      </ul>
+    </div>
+    <div>
+      <ul class="site-nav-list">
+        <li class="site-nav-item"><a href="/home" class="site-nav-link">Home</a></li>
+        <li class="site-nav-item"><a href="/contacts" class="site-nav-link">COntacts</a></li>
+        <li class="site-nav-item"><a href="/about" class="site-nav-link">About</a></li>
       </ul>
     </div>
     <script type="module" src="./js/js-dom.js"></script>
