--- a/dom.html
+++ b/dom.html
@@ -31,6 +31,7 @@
         <li class="site-nav-item"><a href="/about" class="site-nav-link">About</a></li>
       </ul>
     </div>
+    <div class="js-color-picker"></div>
     <script type="module" src="./js/js-dom.js"></script>
   </body>
 </html>
