finished practice - events

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <nav>
         <ul>
           <li><a href="./dom.html">dom</a></li>
+          <li><a href="./events.html">events</a></li>
         </ul>
       </nav>
     </header>
