finished practice - delegations

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
           <li><a href="./dom.html">dom</a></li>
           <li><a href="./events.html">events</a></li>
+          <li><a href="./delegations.html">delegations</a></li>
         </ul>
       </nav>
     </header>
@@ -34,7 +35,8 @@
     <!-- <script type="module" src="./js/methods-of-array.js"></script> -->
     <!-- <script type="module" src="./js/callback.js"></script> -->
     <!-- <script type="module" src="./js/this.js"></script> -->
-    <script type="module" src="./js/class.js"></script>
+    <!-- <script type="module" src="./js/class.js"></script> -->
     <!-- <script type="module" src="./js/object-prototype.js"></script> -->
+    <script type="module" src="./js/delegations.js"></script>
   </body>
 </html>
