finished practice chatty-events (filter debunce)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           <li><a href="./dom.html">dom</a></li>
           <li><a href="./events.html">events</a></li>
           <li><a href="./delegations.html">delegations</a></li>
+          <li><a href="./chatty-events.html">chatty-events</a></li>
         </ul>
       </nav>
     </header>
@@ -37,6 +38,7 @@
     <!-- <script type="module" src="./js/this.js"></script> -->
     <!-- <script type="module" src="./js/class.js"></script> -->
     <!-- <script type="module" src="./js/object-prototype.js"></script> -->
-    <script type="module" src="./js/delegations.js"></script>
+    <!-- <script type="module" src="./js/delegations.js"></script> -->
+    <script type="module" src="./js/chatty-events.js"></script>
   </body>
 </html>
