finished setTimeout practice (task notification)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS-practice</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
@@ -26,6 +27,8 @@
 
     <button type="button" class="js-button">Button</button>
 
+    <p class="alert js-alert">Операція виконана успішно</p>
+
     <!-- <script type="module" src="./js/switch.js"></script> -->
     <!-- <script type="module" src="./js/for-loop.js"></script> -->
     <!-- <script type="module" src="./js/dom.js"></script> -->
@@ -39,6 +42,8 @@
     <!-- <script type="module" src="./js/class.js"></script> -->
     <!-- <script type="module" src="./js/object-prototype.js"></script> -->
     <!-- <script type="module" src="./js/delegations.js"></script> -->
-    <script type="module" src="./js/chatty-events.js"></script>
+    <!-- <script type="module" src="./js/chatty-events.js"></script> -->
+    <!-- <script type="module" src="./js/promise.js"></script> -->
+    <script type="module" src="./js/notification.js"></script>
   </body>
 </html>
