finished practice (promise)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- <script type="module" src="./js/object-prototype.js"></script> -->
     <!-- <script type="module" src="./js/delegations.js"></script> -->
     <!-- <script type="module" src="./js/chatty-events.js"></script> -->
-    <!-- <script type="module" src="./js/promise.js"></script> -->
-    <script type="module" src="./js/notification.js"></script>
+    <script type="module" src="./js/promise.js"></script>
+    <!-- <script type="module" src="./js/notification.js"></script> -->
   </body>
 </html>
