finisheed practice (fetch, rest api, async await)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <li><a href="./events.html">events</a></li>
           <li><a href="./delegations.html">delegations</a></li>
           <li><a href="./chatty-events.html">chatty-events</a></li>
+          <li><a href="./news-api.html">News Api</a></li>
         </ul>
       </nav>
     </header>
@@ -43,7 +44,8 @@
     <!-- <script type="module" src="./js/object-prototype.js"></script> -->
     <!-- <script type="module" src="./js/delegations.js"></script> -->
     <!-- <script type="module" src="./js/chatty-events.js"></script> -->
-    <script type="module" src="./js/promise.js"></script>
+    <!-- <script type="module" src="./js/promise.js"></script> -->
     <!-- <script type="module" src="./js/notification.js"></script> -->
+    <script type="module" src="./js/fetch-api.js"></script>
   </body>
 </html>
